Prepared next release